up through item 13 complete

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 </head>
 
 <body>
-
+<form action="">
+    <input value="" type="text" id="textBox">
+    <input type="submit" id="btnSubmit" value="Submit" disabled>
+</form>
+    
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
